infra/chat-and-video-service.yml
# user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-and-video-deployment
  labels:
    app: chat-and-video
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-and-video
  template:
    metadata:
      labels:
        app: chat-and-video
    spec:
      containers:
        - name: chat-and-video-service
          image: officialrashid/chat-and-video-service:latest 
        

---
# user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-and-video-service
spec:
  selector:
    app: chat-and-video
  ports:
    - name: chat-and-video
      protocol: TCP
      port: 9001
      targetPort: 9001
