infra/reviewer-service.yml
# user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewer-deployment
  labels:
    app: reviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewer
  template:
    metadata:
      labels:
        app: reviewer
    spec:
      containers:
        - name: reviewer-service
          image: officialrashid/reviewer-service:latest
        

---
# user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviewer-service
spec:
  selector:
    app: reviewer
  ports:
    - name: reviewer
      protocol: TCP
      port: 5001
      targetPort: 5001
