infra/student-service.yml
# user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-deployment
  labels:
    app: student
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student
  template:
    metadata:
      labels:
        app: student
    spec:
      containers:
        - name: student-service
          image: officialrashid/student-service:latest
        

---
# user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service
spec:
  selector:
    app: student
  ports:
    - name: student
      protocol: TCP
      port: 4000
      targetPort: 4000
