infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: brototype.com
    http:
      paths:
      - path: /api/fumigation/?(.*)
        pathType: Prefix
        backend:
          service:
            name: fumigation-service
            port:
              number: 3000
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 5173
      - path: /api/student/?(.*)
        pathType: Prefix
        backend:
          service:
            name: student-service
            port:
              number: 4000
      - path: /api/auth/?(.*)
        pathType: Prefix
        backend:
          service:
            name: authentication-service
            port:
              number: 6001
      - path: /api/task/?(.*)
        pathType: Prefix
        backend:
          service:
            name: task-service
            port:
              number: 7001
      - path: /api/superlead/?(.*)
        pathType: Prefix
        backend:
          service:
            name: superlead-service
            port:
              number: 8001
      - path: /api/reviewer/?(.*)
        pathType: Prefix
        backend:
          service:
            name: reviewer-service
            port:
              number: 5001
  ingressClassName: nginx
